--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,26 +7,28 @@ jobs:
   build:
     docker:
       # specify the version you desire here
-      - image: circleci/node:7.10
+      - image: circleci/node:10.9.0
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/mongo:3.4.4
 
-    working_directory: ~/src
+    working_directory: ~/vakme/dragomon
 
     steps:
       - checkout
 
+      - attach_workspace:
+          at: ~/vakme/dragomon
       # Download and cache dependencies
       - restore_cache:
           keys:
           - v1-dependencies-{{ checksum "package.json" }}
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
-
-      - run: yarn deploy
+      - run: yarn env
+      - run: yarn install
 
       - save_cache:
           paths:
@@ -34,4 +36,8 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
 
       # run tests!
-      - run: yarn test
+      - run: yarn build
+
+      - persist_to_workspace:
+          root: .
+          paths: dist
