--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "env": "yarn global add @vue/cli",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "deploy": "yarn build && firebase deploy",
