--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,20 +24,67 @@ jobs:
       # Download and cache dependencies
       - restore_cache:
           keys:
-          - v1-dependencies-{{ checksum "package.json" }}
+          - v1-dependencies-{{ checksum "yarn.lock" }}
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
-      - run: yarn env
       - run: yarn install
 
       - save_cache:
           paths:
             - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
+          key: v1-dependencies-{{ checksum "yarn.lock" }}
 
-      # run tests!
-      - run: yarn build
+      # run build & test!
+      - run: yarn build && yarn test
 
       - persist_to_workspace:
           root: .
           paths: dist
+  deploy:
+    docker:
+      # specify the version you desire here
+      - image: circleci/node:10.9.0
+
+      # Specify service dependencies here if necessary
+      # CircleCI maintains a library of pre-built images
+      # documented at https://circleci.com/docs/2.0/circleci-images/
+      # - image: circleci/mongo:3.4.4
+
+    working_directory: ~/vakme/dragomon
+
+    steps:
+      - checkout
+
+      - attach_workspace:
+          at: ~/vakme/dragomon
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+          - v1-dependencies-{{ checksum "yarn.lock" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-dependencies-
+      - run: yarn install
+
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "yarn.lock" }}
+
+      # run build & test!
+      - run: firebase deploy --token "$FIREBASE_TOKEN"
+
+      - persist_to_workspace:
+          root: .
+          paths: dist
+
+workflows:
+      version: 2
+      -deploy:
+        jobs:
+          - build-job
+          - deploy-job:
+              requires:
+                - build-job
+              filters:
+                branches:
+                  only: master
