--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "env": "yarn global add @vue/cli",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "deploy": "yarn build && firebase deploy",
@@ -21,6 +20,7 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@vue/cli": "^3.1.3",
     "@vue/cli-plugin-babel": "^3.0.0",
     "@vue/cli-plugin-e2e-nightwatch": "^3.0.0",
     "@vue/cli-plugin-eslint": "^3.0.0",
@@ -30,6 +30,7 @@
     "@vue/eslint-config-standard": "^3.0.5",
     "@vue/test-utils": "^1.0.0-beta.20",
     "chai": "^4.1.2",
+    "firebase-tools": "^6.1.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
     "vue-template-compiler": "^2.5.17"
