--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,10 +81,10 @@ workflows:
       version: 2
       -deploy:
         jobs:
-          - build-job
-          - deploy-job:
+          - build
+          - deploy:
               requires:
-                - build-job
+                - build
               filters:
                 branches:
                   only: master
