--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
           key: v1-dependencies-{{ checksum "yarn.lock" }}
 
       # run build & test!
-      - run: yarn build && yarn test
+      - run: yarn build
 
       - persist_to_workspace:
           root: .
@@ -64,6 +64,7 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
       - run: yarn install
+      - run: cd functions && npm install
 
       - save_cache:
           paths:
