--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,8 @@ jobs:
 
       # run build & test!
       - run: yarn build
+      - run: yarn test:unit
+      - run: yarn test:e2e
 
       - persist_to_workspace:
           root: .
@@ -63,19 +65,16 @@ jobs:
           - v1-dependencies-{{ checksum "yarn.lock" }}
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
+
       - run: cd functions && npm install && cd ..
       - run:
            name: Deploy Master to Firebase
            command: ./node_modules/.bin/firebase deploy --token=$FIREBASE_TOKEN
 
-
       - save_cache:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "yarn.lock" }}
-
-      # run build & test!
-      - run: firebase deploy --token "$FIREBASE_TOKEN"
 
       - persist_to_workspace:
           root: .
