--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^5.5.4",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
+    "vue-material": "^1.0.0-beta-10.2",
     "vue-router": "^3.0.1",
     "vuefire": "^1.4.5",
     "vuex": "^3.0.1"
