--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "vue-material": "^1.0.0-beta-10.2",
     "vue-router": "^3.0.1",
     "vuefire": "^1.4.5",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuexfire": "^2.3.1"
   },
   "devDependencies": {
     "@vue/cli": "^3.1.3",
